Removed JDK 11 stuff that breaks JDK 8